# website_crawler

./: .gitignore  README.md  main.py  pyproject.toml  pytest.ini  requirements.txt  runtime.py  tmp_detail.html  tmp_index.html
AssocChamber/: __init__.py  acfic_policy_crawler.py  cflp_crawler.py  chinaisa_crawler.py
ai_news/: __init__.py  ai_new_crawler.py
api/: __init__.py  ai_news_api.py  assoc_chamber_api.py  gov_news_api.py  paper_news_api.py  param_parsers.py
cctv_news/: __init__.py
docs/diagrams/: index.html
examples/: acfic_response.json  cflp_response.json  ndrc_response.json
gov_news/: __init__.py  commerce_news_crawler.py  ndrc_news_crawler.py
model/: __init__.py  enums.py
model/response/: news.py  news_response.py
mysteel/: __init__.py  client.py  request_log.txt
paper_news/: paper_news_crawler.py
paper_news/sources/chinadaily/: cn.py  rss.py
plugins/: __init__.py  ai_daily.py  assoc_acfic_policy.py  assoc_cflp.py  assoc_chinaisa.py  assoc_cnia.py  assoc_coalchina.py  cctv_xwlb.py  gov_commerce.py  gov_ndrc.py  gov_transport.py  mysteel_multi_city_price.py  paper_news.py
plugins/paper_media/: README.md  __init__.py  base.py  economic.py  guangming.py  jjckb.py  peopledaily.py  qiushi.py  test_plugins.py  xinhua.py
scripts/: debug_playwright_mofcom.py  probe_mysteel_api.ps1  run_commerce_test.py  run_mysteel_single.py  run_plugin_gov_commerce.py
test/: __init__.py  test_live_endpoints.py  utils_report.py
test/reports/: real_crawl_report_20250922_233109.md  real_crawl_report_20250923_141928.md
utils/: __init__.py  tool.py
(+38 files in other folders)
