[project]
name = "website-crawler"
version = "0.1.0"
description = "Merged crawler project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "html5lib>=1.1",
  "pydantic>=2.6",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

